# simcom-a76xxx-esp32-driver

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.nodemcu-32s  sdkconfig.nodemcu-32s.old  sdkconfig.pico32
components/: README
components/_applications_/: CMakeLists.txt
components/_config_/: CMakeLists.txt
components/_config_/include/: application_version.h  board_config.h  dummy_cert.h  howsmyssl_cert.h  postdata_cert.h  tasks_config.h
components/_drivers_/: CMakeLists.txt
components/_drivers_/simcom/include/: simcom.h
components/_drivers_/simcom/src/: simcom.c
docs/templates/: template.c  template.h
src/: main.c
